ServiceWorker: Send a result of RequestTermination back to the renderer

ServiceWorkerContextClient requests its termination when the worker gets idle.
However, when the browser knows DevTools is attached to the service worker, the
termination request is silently dropped. After that, even if
ServiceWorkerSubresourceLoader tries to trigger fetch events, those requests
will be queued indefinitely. This CL is to notify the renderer to run tasks
again when DevTools is attached.

Bug: 878667
Change-Id: Iefdc4382489b68aae28aab57b5a7c96520795d14
Reviewed-on: https://chromium-review.googlesource.com/1194820
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588774}
Former-commit-id: 7e9a4a8064db0d57b77cb87e3af665bb4cd3c919