content/browser/service_worker/service_worker_registration_unittest.cc
@@ -138,7 +138,8 @@ class RegistrationTestHelper : public EmbeddedWorkerTestHelper {
 
  protected:
   void OnSetIdleTimerDelayToZero(int embedded_worker_id) override {
-    GetEmbeddedWorkerInstanceHost(embedded_worker_id)->RequestTermination();
+    GetEmbeddedWorkerInstanceHost(embedded_worker_id)
+        ->RequestTermination(base::DoNothing());
   }
 };
 
